# ZSC_FRANKA

./: README.md
panda_core/panda_config/: CMakeLists.txt  package.xml
panda_core/panda_config/config/: control_config.yaml  motion_config.yaml  task_param.yaml  teach.yaml
panda_core/panda_control/: CMakeLists.txt  package.xml
panda_core/panda_control/include/panda_control/: base_controller_server.h
panda_core/panda_control/launch/: base_controller.launch
panda_core/panda_control/src/: base_controller_node.cpp  base_controller_server.cpp  test_controller.cpp
panda_core/panda_core/: CMakeLists.txt  package.xml
panda_core/panda_msgs/: CMakeLists.txt  package.xml
panda_core/panda_msgs/action/: BaseControl.action  MotionPlan.action  PandaTask.action
panda_core/panda_msgs/msg/: ControlStep.msg  Header.msg  MotionStep.msg  TaskStep.msg
